--- a/pom.xml
+++ b/pom.xml
@@ -332,11 +332,11 @@
     <module>handler</module>
     <module>handler-proxy</module>
     <module>example</module>
-    <module>testsuite</module>
+    <!--<module>testsuite</module>
     <module>testsuite-autobahn</module>
     <module>testsuite-http2</module>
     <module>testsuite-osgi</module>
-    <module>testsuite-shading</module>
+    <module>testsuite-shading</module>-->
     <module>microbench</module>
     <module>bom</module>
   </modules>
