--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,10 @@
     <profile>
       <id>coverage</id>
       <properties>
-        <argLine.coverage>${jacoco.argLine}</argLine.coverage>
+
+        <!--自定义调整-->
+
+        <!--<argLine.coverage>${jacoco.argLine}</argLine.coverage>-->
       </properties>
       <build>
         <plugins>
@@ -284,7 +287,10 @@
     <os.detection.classifierWithLikes>fedora</os.detection.classifierWithLikes>
     <tcnative.artifactId>netty-tcnative</tcnative.artifactId>
     <tcnative.version>2.0.22.Final</tcnative.version>
-    <tcnative.classifier>${os.detected.classifier}</tcnative.classifier>
+
+
+    <!--自定义调整-->
+    <!--<tcnative.classifier>${os.detected.classifier}</tcnative.classifier>-->
     <conscrypt.groupId>org.conscrypt</conscrypt.groupId>
     <conscrypt.artifactId>conscrypt-openjdk-uber</conscrypt.artifactId>
     <conscrypt.version>1.3.0</conscrypt.version>
@@ -1018,7 +1024,10 @@
         <!-- Eclipse-related OSGi manifests
              See https://github.com/netty/netty/issues/3886
              More information: http://rajakannappan.blogspot.ie/2010/03/automating-eclipse-source-bundle.html -->
-        <configuration>
+        <!--
+          Eden>Eclipse相关配置
+        -->
+        <!--<configuration>
           <archive>
             <manifestEntries>
               <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
@@ -1029,7 +1038,7 @@
               <Eclipse-SourceBundle>${project.groupId}.${project.artifactId};version="${parsedVersion.osgiVersion}";roots:="."</Eclipse-SourceBundle>
             </manifestEntries>
           </archive>
-        </configuration>
+        </configuration>-->
 
         <executions>
           <!--
@@ -1037,7 +1046,12 @@
             ~ See http://jira.codehaus.org/browse/MSOURCES-13
             ~ and http://blog.peterlynch.ca/2010/05/maven-how-to-prevent-generate-sources.html
             -->
-          <execution>
+
+          <!--
+            无用配置
+          -->
+
+          <!--<execution>
             <id>attach-sources</id>
             <phase>invalid</phase>
             <goals>
@@ -1050,7 +1064,9 @@
             <goals>
               <goal>jar-no-fork</goal>
             </goals>
-          </execution>
+          </execution>-->
+
+
         </executions>
       </plugin>
       <plugin>
@@ -1101,10 +1117,17 @@
 
       <!-- Ensure to put maven-antrun-plugin at the end of the plugin list
            so that they are run lastly in the same phase. -->
-      <plugin>
+
+      <!--
+        Eden>ANT相关插件
+
+      -->
+
+
+     <!-- <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
-          <!-- Generate the version properties for all artifacts. -->
+          &lt;!&ndash; Generate the version properties for all artifacts. &ndash;&gt;
           <execution>
             <id>write-version-properties</id>
             <phase>initialize</phase>
@@ -1115,21 +1138,21 @@
               <target>
                 <taskdef resource="net/sf/antcontrib/antlib.xml" />
 
-                <!-- Get the information about the latest commit -->
+                &lt;!&ndash; Get the information about the latest commit &ndash;&gt;
                 <exec executable="git" outputproperty="gitOutput.lastCommit" resultproperty="gitExitCode.lastCommit" failonerror="false" failifexecutionfails="false">
                   <arg value="log" />
                   <arg value="-1" />
-                  <arg value="--format=format:%h %H %cd" />
-                  <arg value="--date=iso" />
+                  <arg value="&#45;&#45;format=format:%h %H %cd" />
+                  <arg value="&#45;&#45;date=iso" />
                 </exec>
                 <propertyregex property="shortCommitHash" input="${gitOutput.lastCommit}" regexp="^([0-9a-f]+) .*$" select="\1" casesensitive="true" defaultValue="0" />
                 <propertyregex property="longCommitHash" input="${gitOutput.lastCommit}" regexp="^[0-9a-f]+ ([0-9a-f]{40}) .*$" select="\1" casesensitive="true" defaultValue="0000000000000000000000000000000000000000" />
                 <propertyregex property="commitDate" input="${gitOutput.lastCommit}" regexp="^[0-9a-f]+ [0-9a-f]{40} (.*)$" select="\1" casesensitive="true" defaultValue="1970-01-01 00:00:00 +0000" />
 
-                <!-- Get the information abount whether the repository is clean or dirty -->
+                &lt;!&ndash; Get the information abount whether the repository is clean or dirty &ndash;&gt;
                 <exec executable="git" outputproperty="gitOutput.repoStatus" resultproperty="gitExitCode.repoStatus" failonerror="false" failifexecutionfails="false">
                   <arg value="status" />
-                  <arg value="--porcelain" />
+                  <arg value="&#45;&#45;porcelain" />
                 </exec>
                 <if>
                   <equals arg2="0" arg1="${gitExitCode.repoStatus}" />
@@ -1149,13 +1172,13 @@
                   </else>
                 </if>
 
-                <!-- Print the obtained commit information. -->
+                &lt;!&ndash; Print the obtained commit information. &ndash;&gt;
                 <echo>Current commit: ${shortCommitHash} on ${commitDate}</echo>
 
-                <!-- Generate the .properties file. -->
-                <!--
+                &lt;!&ndash; Generate the .properties file. &ndash;&gt;
+                &lt;!&ndash;
                 <property name="metaInfDir" value="${project.basedir}/src/main/resources/META-INF" />
-                -->
+                &ndash;&gt;
                 <property name="metaInfDir" value="${project.build.outputDirectory}/META-INF" />
                 <property name="versionPropFile" value="${metaInfDir}/${project.groupId}.versions.properties" />
                 <mkdir dir="${metaInfDir}" />
@@ -1196,7 +1219,10 @@
             </exclusions>
           </dependency>
         </dependencies>
-      </plugin>
+      </plugin>-->
+
+
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-remote-resources-plugin</artifactId>
@@ -1245,9 +1271,15 @@
                   <manifest>
                     <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                   </manifest>
-                  <manifestEntries>
+
+                  <!--
+                    Eden
+                  -->
+
+                  <!--<manifestEntries>
                     <Automatic-Module-Name>${javaModuleName}</Automatic-Module-Name>
-                  </manifestEntries>
+                  </manifestEntries>-->
+
                   <index>true</index>
                   <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                 </archive>
